--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 /*   font-family: 'Crimson Text', Arial, Helvetica, sans-serif;  */
  font-family: 'Palanquin', Arial, Helvetica, sans-serif;
  font-size: 1.1;
- background-color: #fefefe;
  margin-top: 0;
 }
 
@@ -28,17 +27,46 @@ pre {
 }
 pre code {
   white-space: inherit;
-  font-size: .80em;
+  font-size: .90em;
 }
 
 h1, h2, h3, h4, h5 {
+  font-style: italic;
   color: rgb(47, 84, 150);
+}
+
+h1 {
+  margin-top: 2em;
+  font-style: italic;
+  font-size: 2em;
+}
+
+h2 {
+  margin-top: 1.5em;
+  font-size: 1.5em;
+  border: none;
+}
+
+h3 {
+  margin-top: 1.75em;
+  margin-bottom: 1em;
+  font-size: 1.25em;
+}
+
+h4 {
+  margin-top: 1.5em;
+  font-size: 1.1em;
+}
+
+h1.title {
+  font-size: 2.25em;
+  font-weight: 500;
 }
 
 dfn {
   color: #7d1633;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 blockquote p em{
